--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
+* {
+    font-family: 'Muller', sans-serif;
+}
 
 .container {
     margin: 0 auto;
-    width: 1170px;
+    max-width: 1170px;
 }
 
 #Capa_1 {
